--- a/src/index.css
+++ b/src/index.css
@@ -92,12 +92,13 @@ h4 { font-size: 24px; }
 
 .hero-video {
   position: absolute;
-  top: 0;
+  top: -0.21%;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100.42%;
   object-fit: cover;
   z-index: 1;
+  max-width: none;
 }
 
 .hero-overlay {
