--- a/src/index.css
+++ b/src/index.css
@@ -92,12 +92,12 @@ h4 { font-size: 24px; }
 
 .hero-video {
   position: absolute;
-  top: 0;
+  top: -5%;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 110%;
   object-fit: cover;
-  object-position: center top;
+  object-position: center center;
   z-index: 1;
 }
 
