--- a/src/index.css
+++ b/src/index.css
@@ -92,12 +92,13 @@ h4 { font-size: 24px; }
 
 .hero-video {
   position: absolute;
-  top: -5%;
-  left: 0;
-  width: 100%;
-  height: 110%;
-  object-fit: cover;
-  object-position: center center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
   z-index: 1;
 }
 
