--- a/src/index.css
+++ b/src/index.css
@@ -92,13 +92,11 @@ h4 { font-size: 24px; }
 
 .hero-video {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
+  top: -0.21%;
+  left: 0;
+  width: 100%;
+  height: 100.42%;
+  max-width: none;
   z-index: 1;
 }
 
