--- a/src/index.css
+++ b/src/index.css
@@ -227,8 +227,9 @@ h4 { font-size: 24px; }
 .speakers-section {
   background-color: var(--black);
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
   height: 810px;
+  width: 1280px;
 }
 
 .speakers-section h2 {
