--- a/src/index.css
+++ b/src/index.css
@@ -230,6 +230,7 @@ h4 { font-size: 24px; }
   margin: 0 auto;
   height: 810px;
   width: 1280px;
+  overflow: hidden;
 }
 
 .speakers-section h2 {
@@ -331,6 +332,7 @@ h4 { font-size: 24px; }
   width: 1280px;
   height: 699px;
   margin: 0 auto;
+  padding: 0;
   background-color: var(--white);
 }
 
@@ -1829,7 +1831,7 @@ h4 { font-size: 24px; }
   object-fit: cover;
 }
 
-.speakers-section {
+.speakers-page-section {
   position: relative;
   width: 100%;
   padding: 0;
